--- a/semiProject/src/main/resources/templates/info/infoList.html
+++ b/semiProject/src/main/resources/templates/info/infoList.html
@@ -26,11 +26,11 @@
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">활동구분</div>
-                    <div class="filter-select-box"><select id="actType"><option value="">전체</option></select></div>
+                    <div class="filter-select-box"><select name="actType" id="actType"><option value="">전체</option></select></div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">봉사대상</div>
-                    <div class="filter-select-box"><select id="target"><option value="">전체</option></select></div>
+                    <div class="filter-select-box"><select name="target" id="target"><option value="">전체</option></select></div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">모집상태</div>
@@ -42,12 +42,12 @@
                 <div class="detail-row">
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사기간</label>
-                        <input type="date" name="bgnde"> &nbsp;~&nbsp; <input type="date" name="endde">
+                        <input type="date" name="bgnde" th:value="${param.bgnde}"> &nbsp;~&nbsp; <input type="date" name="endde" th:value="${param.endde}">
                     </div>
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사자유형</label>
-                        <label><input type="checkbox" name="volsType" value="adult" onclick="checkOnlyOne(this)"> 성인</label> &nbsp;
-                        <label><input type="checkbox" name="volsType" value="teen" onclick="checkOnlyOne(this)"> 청소년</label>
+                        <label><input type="checkbox" name="volsType" value="adult" onclick="checkOnlyOne(this)" th:checked="${param.volsType == 'adult'}"> 성인</label> &nbsp;
+                        <label><input type="checkbox" name="volsType" value="teen" onclick="checkOnlyOne(this)" th:checked="${param.volsType == 'teen'}"> 청소년</label>
                     </div>
                 </div>
 
@@ -55,11 +55,11 @@
                     <div class="detail-item" style="flex: 1;">
                         <span class="orange-dot"></span><label>인정시간</label>
                         <div class="checkbox-group">
-                            <label><input type="checkbox" name="searchTime" value="all" onclick="checkOnlyOne(this)" checked> 전체</label> &nbsp;
+                            <label><input type="checkbox" name="searchTime" value="all" onclick="checkOnlyOne(this)" th:checked="${param.searchTime == null || param.searchTime == 'all'}"> 전체</label> &nbsp;
                             <th:block th:each="num : ${#numbers.sequence(1, 7)}">
-                                <label><input type="checkbox" name="searchTime" th:value="${num}" onclick="checkOnlyOne(this)"> [[${num}]]시간</label> &nbsp;
+                                <label><input type="checkbox" name="searchTime" th:value="${num}" onclick="checkOnlyOne(this)" th:checked="${param.searchTime != null && param.searchTime[0] == #strings.toString(num)}"> [[${num}]]시간</label> &nbsp;
                             </th:block>
-                            <label><input type="checkbox" name="searchTime" value="9" onclick="checkOnlyOne(this)"> 8시간 이상</label>
+                            <label><input type="checkbox" name="searchTime" value="9" onclick="checkOnlyOne(this)" th:checked="${param.searchTime != null && param.searchTime[0] == '9'}"> 8시간 이상</label>
                         </div>
                     </div>
                 </div>
@@ -67,11 +67,11 @@
                 <div class="detail-row">
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사명</label>
-                        <input type="text" name="progrmNm" placeholder="봉사명을 입력하세요" style="width: 350px;">
+                        <input type="text" name="progrmNm" placeholder="봉사명을 입력하세요" style="width: 350px;" th:value="${param.progrmNm}">
                     </div>
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>활동기관</label>
-                        <input type="text" name="nanmmByNm" style="width: 350px;">
+                        <input type="text" name="nanmmByNm" style="width: 350px;" th:value="${param.nanmmByNm}">
                     </div>
                 </div>
                 
@@ -90,7 +90,10 @@
             <div th:each="info : ${infoList}" class="info-card">
                 <div class="card-left">
                     <div class="card-tags">시간인증 | 오프라인 | [[${info.actRm}]]</div>
-                    <div class="card-title">[[${info.progrmNm}]]</div>
+                    <div class="card-title">
+                        <a th:href="@{/info/detail/{no}(no=${info.infoBoardNo})}" 
+                           th:text="${info.progrmNm}" style="text-decoration: none; color: inherit; cursor: pointer;">봉사 제목</a>
+                    </div>
                     <div class="card-info-grid">
                         <span><b>[모집기간]</b> [[${info.noticeBgnDe}]]~[[${info.noticeEndDe}]]</span>
                         <span><b>[봉사기간]</b> [[${info.progrmBgnde}]]~[[${info.progrmEndde}]]</span>
@@ -109,15 +112,27 @@
         </div>
 
         <ul class="pagination" th:if="${not #lists.isEmpty(infoList)}">
-            <li><a th:href="@{/info/listPage(cp=1)}">&lt;&lt;</a></li>
-            <li><a th:href="@{/info/listPage(cp=${pagination.prevPage})}">&lt;</a></li>
-            <th:block th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}">
-                <li th:classappend="${i == pagination.currentPage} ? 'active'">
-                    <a th:href="@{/info/listPage(cp=${i})}" th:text="${i}">1</a>
-                </li>
+            <th:block th:with="queryStr='schSido=' + ${param.schSido != null ? param.schSido : ''} + 
+                                       '&schSign=' + ${param.schSign != null ? param.schSign : ''} + 
+                                       '&actRm=' + ${param.actRm != null ? param.actRm : ''} + 
+                                       '&progrmNm=' + ${param.progrmNm != null ? param.progrmNm : ''} + 
+                                       '&nanmmByNm=' + ${param.nanmmByNm != null ? param.nanmmByNm : ''} + 
+                                       '&bgnde=' + ${param.bgnde != null ? param.bgnde : ''} + 
+                                       '&endde=' + ${param.endde != null ? param.endde : ''} + 
+                                       '&searchTime=' + ${param.searchTime != null ? param.searchTime : ''}">
+                
+                <li><a th:href="|/info/listPage?cp=1&${queryStr}|">&lt;&lt;</a></li>
+                <li><a th:href="|/info/listPage?cp=${pagination.prevPage}&${queryStr}|">&lt;</a></li>
+                
+                <th:block th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}">
+                    <li th:classappend="${i == pagination.currentPage} ? 'active'">
+                        <a th:href="|/info/listPage?cp=${i}&${queryStr}|" th:text="${i}">1</a>
+                    </li>
+                </th:block>
+                
+                <li><a th:href="|/info/listPage?cp=${pagination.nextPage}&${queryStr}|">&gt;</a></li>
+                <li><a th:href="|/info/listPage?cp=${pagination.maxPage}&${queryStr}|">&gt;&gt;</a></li>
             </th:block>
-            <li><a th:href="@{/info/listPage(cp=${pagination.nextPage})}">&gt;</a></li>
-            <li><a th:href="@{/info/listPage(cp=${pagination.maxPage})}">&gt;&gt;</a></li>
         </ul>
     </main>
 
